@@ -16,7 +16,6 @@
 
 package org.springframework.cloud.kubernetes.fabric8.config;
 
-import java.util.Collections;
 import java.util.Map;
 
 import io.fabric8.kubernetes.api.model.ConfigMap;
@@ -24,8 +23,8 @@ import io.fabric8.kubernetes.api.model.ConfigMapBuilder;
 import io.fabric8.kubernetes.client.Config;
 import io.fabric8.kubernetes.client.KubernetesClient;
 import io.fabric8.kubernetes.client.server.mock.EnableKubernetesMockClient;
+import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -100,8 +99,8 @@ class NamedConfigMapContextToSourceDataProviderNamespacedBatchReadTests {
 		Fabric8ContextToSourceData data = new NamedConfigMapContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "configmap.blue.default");
-		Assertions.assertEquals(sourceData.sourceData(), Collections.emptyMap());
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("configmap.blue.default");
+		Assertions.assertThat(sourceData.sourceData()).isEmpty();
 
 	}
 
@@ -129,8 +128,8 @@ class NamedConfigMapContextToSourceDataProviderNamespacedBatchReadTests {
 		Fabric8ContextToSourceData data = new NamedConfigMapContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "configmap.red.default");
-		Assertions.assertEquals(sourceData.sourceData(), COLOR_REALLY_RED);
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("configmap.red.default");
+		Assertions.assertThat(sourceData.sourceData()).isEqualTo(COLOR_REALLY_RED);
 
 	}
 
@@ -171,10 +170,9 @@ class NamedConfigMapContextToSourceDataProviderNamespacedBatchReadTests {
 		Fabric8ContextToSourceData data = new NamedConfigMapContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "configmap.red.red-with-profile.default.with-profile");
-		Assertions.assertEquals(sourceData.sourceData().size(), 2);
-		Assertions.assertEquals(sourceData.sourceData().get("color"), "really-red");
-		Assertions.assertEquals(sourceData.sourceData().get("taste"), "mango");
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("configmap.red.red-with-profile.default.with-profile");
+		Assertions.assertThat(sourceData.sourceData())
+			.containsExactlyInAnyOrderEntriesOf(Map.of("color", "really-red", "taste", "mango"));
 
 	}
 
@@ -217,11 +215,9 @@ class NamedConfigMapContextToSourceDataProviderNamespacedBatchReadTests {
 		Fabric8ContextToSourceData data = new NamedConfigMapContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "configmap.red.red-with-profile.default");
-		Assertions.assertEquals(sourceData.sourceData().size(), 2);
-		Assertions.assertEquals(sourceData.sourceData().get("some.color"), "really-red");
-		Assertions.assertEquals(sourceData.sourceData().get("some.taste"), "mango");
-
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("configmap.red.red-with-profile.default");
+		Assertions.assertThat(sourceData.sourceData())
+			.containsExactlyInAnyOrderEntriesOf(Map.of("some.color", "really-red", "some.taste", "mango"));
 	}
 
 	/**
@@ -269,11 +265,10 @@ class NamedConfigMapContextToSourceDataProviderNamespacedBatchReadTests {
 		Fabric8ContextToSourceData data = new NamedConfigMapContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "configmap.red.red-with-shape.red-with-taste.default");
-		Assertions.assertEquals(sourceData.sourceData().size(), 3);
-		Assertions.assertEquals(sourceData.sourceData().get("some.color"), "really-red");
-		Assertions.assertEquals(sourceData.sourceData().get("some.taste"), "mango");
-		Assertions.assertEquals(sourceData.sourceData().get("some.shape"), "round");
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("configmap.red.red-with-shape.red-with-taste.default");
+		Assertions.assertThat(sourceData.sourceData())
+			.containsExactlyInAnyOrderEntriesOf(
+					Map.of("some.color", "really-red", "some.taste", "mango", "some.shape", "round"));
 
 	}
 
@@ -300,8 +295,8 @@ class NamedConfigMapContextToSourceDataProviderNamespacedBatchReadTests {
 		Fabric8ContextToSourceData data = new NamedConfigMapContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "configmap.application.default");
-		Assertions.assertEquals(sourceData.sourceData(), Collections.singletonMap("color", "red"));
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("configmap.application.default");
+		Assertions.assertThat(sourceData.sourceData()).containsExactlyInAnyOrderEntriesOf(Map.of("color", "red"));
 	}
 
 	/**
@@ -330,8 +325,9 @@ class NamedConfigMapContextToSourceDataProviderNamespacedBatchReadTests {
 		Fabric8ContextToSourceData data = new NamedConfigMapContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "configmap.red.default");
-		Assertions.assertEquals(sourceData.sourceData(), Collections.singletonMap("color", "really-red"));
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("configmap.red.default");
+		Assertions.assertThat(sourceData.sourceData())
+			.containsExactlyInAnyOrderEntriesOf(Map.of("color", "really-red"));
 	}
 
 	/**
@@ -356,8 +352,8 @@ class NamedConfigMapContextToSourceDataProviderNamespacedBatchReadTests {
 		Fabric8ContextToSourceData data = new NamedConfigMapContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "configmap.red.default");
-		Assertions.assertEquals(sourceData.sourceData(), Collections.singletonMap("key", "value"));
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("configmap.red.default");
+		Assertions.assertThat(sourceData.sourceData()).containsExactlyInAnyOrderEntriesOf(Map.of("key", "value"));
 	}
 
 	/**
@@ -387,8 +383,8 @@ class NamedConfigMapContextToSourceDataProviderNamespacedBatchReadTests {
 		Fabric8ContextToSourceData data = new NamedConfigMapContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "configmap.one.default");
-		Assertions.assertEquals(sourceData.sourceData(), Collections.singletonMap("key", "value"));
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("configmap.one.default");
+		Assertions.assertThat(sourceData.sourceData()).containsExactlyInAnyOrderEntriesOf(Map.of("key", "value"));
 	}
 
 	/**
@@ -424,12 +420,11 @@ class NamedConfigMapContextToSourceDataProviderNamespacedBatchReadTests {
 		Fabric8ContextToSourceData redData = new NamedConfigMapContextToSourceDataProvider().get();
 		SourceData redSourceData = redData.apply(redContext);
 
-		Assertions.assertEquals(redSourceData.sourceName(), "configmap.red.default");
-		Assertions.assertEquals(redSourceData.sourceData().size(), 1);
-		Assertions.assertEquals(redSourceData.sourceData().get("some.color"), "really-red");
-
-		Assertions.assertTrue(output.getAll().contains("Loaded all config maps in namespace '" + NAMESPACE + "'"));
-		Assertions.assertFalse(output.getOut().contains("Will read individual configmaps in namespace"));
+		Assertions.assertThat(redSourceData.sourceName()).isEqualTo("configmap.red.default");
+		Assertions.assertThat(redSourceData.sourceData().size()).isEqualTo(1);
+		Assertions.assertThat(redSourceData.sourceData().get("some.color")).isEqualTo("really-red");
+		Assertions.assertThat(output.getAll()).contains("Loaded all config maps in namespace '" + NAMESPACE + "'");
+		Assertions.assertThat(output.getAll()).contains("Will read individual configmaps in namespace");
 
 		NormalizedSource greenNormalizedSource = new NamedConfigMapNormalizedSource("green", NAMESPACE, true, PREFIX,
 				false);
@@ -438,17 +433,17 @@ class NamedConfigMapContextToSourceDataProviderNamespacedBatchReadTests {
 		Fabric8ContextToSourceData greenData = new NamedConfigMapContextToSourceDataProvider().get();
 		SourceData greenSourceData = greenData.apply(greenContext);
 
-		Assertions.assertEquals(greenSourceData.sourceName(), "configmap.green.default");
-		Assertions.assertEquals(greenSourceData.sourceData().size(), 1);
-		Assertions.assertEquals(greenSourceData.sourceData().get("some.taste"), "mango");
+		Assertions.assertThat(greenSourceData.sourceName()).isEqualTo("configmap.green.default");
+		Assertions.assertThat(greenSourceData.sourceData().size()).isEqualTo(1);
+		Assertions.assertThat(greenSourceData.sourceData().get("some.taste")).isEqualTo("mango");
 
 		// meaning there is a single entry with such a log statement
 		String[] out = output.getAll().split("Loaded all config maps in namespace");
-		Assertions.assertEquals(out.length, 2);
+		Assertions.assertThat(out.length).isEqualTo(2);
 
 		// meaning that the second read was done from the cache
 		out = output.getAll().split("Loaded \\(from cache\\) all config maps in namespace");
-		Assertions.assertEquals(out.length, 2);
+		Assertions.assertThat(out.length).isEqualTo(2);
 
 	}
 
